# RustyRoad

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  clippy.toml  package-lock.json  ruby-output.md  rustyroad.toml  todo.md
.cargo/: config.toml
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml
example/: .env.example  Cargo.toml  README.md  history.txt  package.json  postcss.config.js  rustyroad.toml  tailwind.config.js  temp.rs
example-grapesjs/: .gitignore  Cargo.toml  README.md  dockerfile  package.json  postcss.config.js  rustyroad.toml  tailwind.config.js
example-grapesjs/src/: main.rs
example-grapesjs/src/controllers/: dashboard.rs  image.rs  index.rs  login.rs  mod.rs  not_found.rs  page.rs
example-grapesjs/src/models/: child.rs  mod.rs  page.rs  user.rs
example-grapesjs/src/views/: base.html.tera
example-grapesjs2/: package.json
example/.cargo/: config.toml
example/client/: package.json  rollup.config.js  transform.js  tsconfig.json  vite.config.ts  webpack.config.js  webpack.prod.js
example/client/src/: entry-server.tsx
example/config/database/: dev.db
example/config/database/migrations/20230323224232-items/: up.sql
example/config/database/migrations/20230327201216-test2/: up.sql
example/config/database/migrations/20230327215027-test4/: down.sql  up.sql
example/config/database/migrations/20230409184120_user/: down.sql  up.sql
example/config/database/migrations/20230424005641_user/: up.sql
example/config/database/migrations/20230427011957_user/: up.sql
example/config/database/migrations/20230427012413_user/: up.sql
example/config/database/migrations/20230428004322_user/: down.sql
example/config/database/migrations/20230430232538_user/: up.sql
example/config/database/migrations/20230430233901_user/: up.sql
example/config/database/migrations/20230430234214_user/: up.sql
example/config/database/migrations/20230501125515_user/: up.sql
example/config/database/migrations/20230501131104_user/: up.sql
example/config/database/migrations/20230501131330_user/: up.sql
example/config/database/migrations/20230501230938_user/: up.sql
example/config/database/migrations/20230501231312_user/: up.sql
example/config/database/migrations/20230501231710_user/: up.sql
example/config/database/migrations/20230501232303_user/: up.sql
example/config/database/migrations/20230501233248_user/: up.sql
example/config/database/migrations/20230501233905_user/: up.sql
example/config/database/migrations/20230501234804_user/: up.sql
example/config/database/migrations/20230501235405_user/: up.sql
example/config/database/migrations/20230501235505_user/: up.sql
example/config/database/migrations/20230501235556_user/: up.sql
example/config/database/migrations/20230502000209_user/: up.sql
example/config/database/migrations/20230502000408_user/: up.sql
example/config/database/migrations/20230502000954_user/: up.sql
example/config/database/migrations/20230502211844_user/: up.sql
example/config/database/migrations/20230502211931_user/: up.sql
example/config/database/migrations/20230702155253_user/: up.sql
example/config/database/migrations/20230710015344-pets/: down.sql  up.sql
example/config/database/migrations/20230821185121_user/: up.sql
example/config/database/migrations/20230827093130_user/: up.sql
example/config/database/migrations/20230831015152_user/: up.sql
example/config/database/migrations/20230831020319-grapes_js/: up.sql
example/config/database/migrations/20230908000507_user/: down.sql  up.sql
example/config/database/migrations/20230908004704-grapes_js/: down.sql
example/config/database/migrations/20230909153215-grapes_js/: up.sql
example/config/environments/: dev.env
example/src/: main.rs
example/src/controllers/: dashboard.rs  index.rs  login.rs  mod.rs  page.rs
example/src/controllers/edit_page/: edit_page.rs  mod.rs
example/src/database/migrations/: create.rs
example/src/database/migrations/20230321230745_create/: down.sql  mod.rs
example/src/models/: grapes_js.rs  mod.rs  user.rs
example/src/routes/: dashboard.rs  index.rs  login.rs  mod.rs
example/src/routes/new_route/: mod.rs  new_route.rs
example/src/routes/test/: mod.rs  test.rs
example/src/views/: base.html.tera
example/src/views/components/: navbar.html.tera
example/src/views/layouts/authenticated/: authenticated.html.tera
example/src/views/layouts/authenticated/grapesjs/: edit_page.html.tera
example/src/views/pages/: 404.html.tera  dashboard.html.tera  edit_page.html.tera  index.html.tera  login.html.tera  page.html.tera
example/src/views/sections/: header.html.tera
example/static/: styles.css
example/static/css/: styles.css
example/static/js/: grapesjs-tailwind.min.js  index.js
example/templates/: base.html.tera
example/templates/components/: navbar.html.tera
example/templates/pages/: dashboard.html.tera  index.html.tera  login.html.tera  new_route.html.tera
example/templates/sections/: header.html.tera
example2/: Cargo.toml  README.md  package.json  rustyroad.toml
migrations/20230322202153_create_users_table/: up.sql
sql_test/: Cargo.toml  README.md  rustyroad.toml
sql_test/config/database/migrations/20230420160051_user/: down.sql  up.sql
sql_test/static/js/: index.js
sql_test/templates/sections/: header.html.tera
src/: helpers.rs  lib.rs  main.rs
src/database/: SQLite.sqlite  connect.rs  database.rs  databasetype.rs  migrations.rs  mod.rs  schema.rs
src/features/: features.rs  grapesjs.rs  mod.rs
src/generators/: directory.rs  file.rs  index.md  mod.rs  navbar.rs
src/mcp/: main.rs
src/models/: grapes_js.rs  mod.rs
src/writers/: file.rs  mod.rs  write_to_controllers_mod.rs  write_to_main.rs  write_to_routes_mod.rs
test_project/: Cargo.toml  README.md  rustyroad.toml
tests/: category_test.rs  databasetype_test.rs  initial_sql_loader_tests.rs  migration_generation_test.rs  query_tests.rs  run_migration_test_mysql.rs  run_migration_test_postgres.rs  run_migration_test_sqlite.rs
(+155 files in other folders)
