[package]
name = "rustyroad"
version = "0.1.8-beta"
edition = "2021"
license = "MIT"
description = "Rusty Road is a framework written in Rust that is based on Ruby on Rails. It is designed to provide the familiar conventions and ease of use of Ruby on Rails, while also taking advantage of the performance and efficiency of Rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/RileySeaburg/RustyRoad"
readme = "README.md"
keywords = ["web", "framework", "rust", "rails", "ruby"]
categories = ["web-programming::frameworks"]
documentation = "https://docs.rs/rustyroad"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = {version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
pkg-config = {version = "0.3.26", optional = true}
diesel = { version = "2.0", features = [  "r2d2"]}
clap_complete = "4.1.5"
diesel_migrations = "2.0"
regex = "1.0"
serde_regex = "1.0"
rustyline = {version = "11.0.0", features = ["with-file-history"]} 
sqlparser = "0.33.0"
tempfile = "3.5.0"
postgres = "0.19.5"
r2d2 = "0.8.10"
mysql = "23.0.1"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "sqlite", "postgres", "time", "uuid", "mysql"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-postgres = "0.7.8"
futures-util = "0.3.28"
lazy_static = "1.4.0"
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.26"
proc-macro2 = "1.0.56"
bcrypt = "0.14.0"
chrono = "0.4.24"
strum_macros = "0.24.3"
mysql_async = "0.32.2"
dialoguer = "0.10.4"
strum = "0.25.0"
maplit = "1.0.2"
[features]
with-file-history = []
