[package]
name = "example"
version = "0.1.0"
authors = ["RustyRoad"]
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-files = "0.6.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
random-string = "1.0.0"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
futures = "0.3.23"
tera = "1.17.1"
reqwest = "0.11"
rustyroad = "0.1.5"
[dependencies.sqlx]
features = ["mysql", "macros", "chrono", "json", "uuid", "offline"]
version = "0.6.2"
