[package]
name = "sql_test"
version = "0.1.0"
authors = ["RustyRoad"]
edition = "2021"
[dependencies]
rocket = "0.5.0-rc.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
random-string = "1.0.0"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
futures = "0.3.23"
tera = "1.17.1"
reqwest = "0.11"
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}
rustyroad = "0.1.3"
[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]